[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Tower1.gd" type="Script" id=1]
[ext_resource path="res://Assets/redcircle.png" type="Texture" id=2]
[ext_resource path="res://Assets/tank3.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[sub_resource type="CircleShape2D" id=3]
radius = 32.7323

[node name="Tower1" type="Node2D"]
script = ExtResource( 1 )

[node name="RangeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea"]
position = Vector2( 0.166092, 0.664337 )
shape = SubResource( 1 )

[node name="RangeSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.345098 )
scale = Vector2( 6.21508, -6.48106 )
texture = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
position = Vector2( -1.51703, -1.974 )
scale = Vector2( 0.349644, 0.349644 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -1.64819, 0 )
scale = Vector2( 1.16, 1.16 )
shape = SubResource( 2 )

[node name="HoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverArea"]
position = Vector2( -1.32867, 0 )
scale = Vector2( 1.2, 1.2 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "Turret6"
[connection signal="body_entered" from="RangeArea" to="." method="_on_RangeArea_body_entered"]
[connection signal="body_exited" from="RangeArea" to="." method="_on_RangeArea_body_exited"]
[connection signal="mouse_entered" from="HoverArea" to="." method="_on_HoverArea_mouse_entered"]
[connection signal="mouse_exited" from="HoverArea" to="." method="_on_HoverArea_mouse_exited"]
